# RawGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  pyproject.toml
.github/workflows/: docs-pages.yml
SRC/: RAWGL.props  RAWGL.sln
SRC/RawGL/: RawGL.aps  RawGL.vcxproj  RawGL.vcxproj.filters
SRC/RawGL/src/: PassInput.cpp  RawGL.cpp  (+15 more)
SRC/RawGLCore/: RawGLCore.vcxproj  RawGLCore.vcxproj.filters
SRC/cmake/: rawgl_dependencies.cmake  rawgl_helpers.cmake  rawgl_options.cmake  rawgl_targets.cmake  rawgl_testing.cmake  rawgl_windows_static_link.cmake
cmake/: RawGLInstallWheel.cmake.in  rawgl_dependencies.cmake  rawgl_docs.cmake  rawgl_helpers.cmake  rawgl_openmeta_boundary_check.cmake  rawgl_options.cmake  rawgl_platform_linux.cmake  rawgl_platform_windows.cmake  rawgl_report.cmake  rawgl_targets.cmake  rawgl_testing.cmake  rawgl_version.h.in  rawgl_windows_static_link.cmake
docs/: Doxyfile.in  glsl_interface_support_2.0.0.md  rawgl_batch_design_2026-04-18.md  rawgl_documentation_strategy_2026-04-21.md  rawgl_metadata_write_and_transfer_2026-04-22.md  rawgl_module_split_2026-04-17.md  rawgl_native_image_io_backend_plan_2026-04-22.md  rawgl_native_metadata_write_jpeg_tiff_2026-04-22.md  rawgl_public_api_redesign_2026-04-16.md  rawgl_refactor_backlog_and_test_plan_2026-04-10.md  rawgl_review_2026-04-10.md  rawgl_type_support_and_python_binding_plan_2026-04-15.md  requirements.txt
docs/sphinx/: api.rst  batch.rst  cli.rst  concepts.rst  conf.py.in  cpp.rst  examples.rst  index.rst  io.rst  python.rst  quick_start.rst
examples/EmptyLUT/: EmptyLUT.frag  EmptyLUTGen.bat  EmptyLUTGen.py  empty.vert
examples/Histogram/: EqualizeImage.py  HistogramGen.py  PlotRGBHistogram.py
examples/ImageProcessing/: AdjustImage.py
examples/Mesh/: RenderMeshOverBackground.py
examples/Metadata/: ReadMetadata.py  ReadMetadata_copy_python.tif.xmp  ReadMetadata_explicit_python.tif  ReadMetadata_explicit_python.tif.xmp  ReadMetadata_python.tif
examples/NumPy/: .gitignore  NumpyBatchMultipass.py  NumpyTypedIoPipeline.py
examples/RangeMap/: NormalizeRange.py
examples/Sequence/: BitshiftSequence.py
glsl2spv/: glsl2spv.bat
ide/msvc-legacy/: RAWGL.props  RAWGL.sln
include/rawgl/: rawgl.h  rawgl_batch.h  rawgl_cli.h  rawgl_core.h  rawgl_io.h
src/app/: main.cpp
src/batch/: batch_runner.cpp
src/cli/: cli_graph.cpp  cli_graph.h  cli_parser.cpp  cli_parser.h  command_line_graph.cpp  command_line_graph.h  command_line_parser.cpp  command_line_parser.h
src/core/: context.cpp  rawgl_core.cpp
src/gl/: gl_program.h  gl_program_manager.cpp  gl_program_manager.h  gl_utils.cpp  gl_utils.h  opengl_utils.cpp  program.cpp  program.h  program_manager.cpp  program_manager.h  texture.cpp  texture.h
src/io/: exr_backend.cpp  exr_backend.h  graph_request_materializer.cpp  graph_request_materializer.h  image_backend.cpp  image_backend.h  image_io.cpp  image_io.h  image_utils.cpp  io_facade.cpp  io_runtime.cpp  io_runtime.h  jpeg2000_backend.cpp  jpeg2000_backend.h  jpg_backend.cpp  jpg_backend.h  libraw_dng_stub.cpp  mesh_io.cpp  mesh_io.h  metadata_internal.h  metadata_reader.cpp  metadata_storage.h  openmeta_bridge.cpp  output_writer.cpp  output_writer.h  png_backend.cpp  png_backend.h  texture_loader.cpp  texture_loader.h  tiff_backend.cpp  tiff_backend.h
src/python/: CMakeLists.txt  rawgl_module.cpp
src/python/rawgl/: __init__.py
src/runtime/: pass_input.cpp  pass_output.cpp  runtime_help_text.h  sequence.cpp  sequence.h
src/support/: asset_manager.h  common.h  log.cpp  log.h  path_utils.h  timer.h
tests/: EmptyLUTGen_fileformats.bat  rawgl_batch_smoke.cpp  rawgl_cli_codec_options_smoke.cpp  rawgl_core_array_element_smoke.cpp  rawgl_core_default_vertex_smoke.cpp  rawgl_core_graph_smoke.cpp  rawgl_core_host_image_capture_smoke.cpp  rawgl_core_input_override_smoke.cpp  rawgl_core_inspect_smoke.cpp  rawgl_core_mesh_inspect_smoke.cpp  rawgl_core_mesh_override_smoke.cpp  rawgl_core_persistent_atomic_counter_smoke.cpp  rawgl_core_persistent_texture_smoke.cpp  rawgl_core_shared_context_smoke.cpp  rawgl_core_shared_file_resources_smoke.cpp  rawgl_core_system_uniform_reject_smoke.cpp  rawgl_core_transient_output_reuse_smoke.cpp  rawgl_io_capabilities_smoke.cpp  rawgl_io_host_image_smoke.cpp  rawgl_io_jpeg2000_native_smoke.cpp  rawgl_io_metadata_smoke.cpp  rawgl_io_native_codec_errors_smoke.cpp  rawgl_io_native_codecs_smoke.cpp  rawgl_io_sky_codec_conversion_smoke.cpp  rawgl_io_tiff_native_smoke.cpp  rawgl_io_typed_options_matrix_smoke.cpp  rawgl_io_workflow_smoke.cpp  test_atomic_counter.bat  test_atomic_counter.sh  test_atomic_counter_reuse.sh  test_cli_native_codec_outputs.bat  test_cli_native_codec_outputs.sh  test_comp_shader.bat  test_compute_image_chain.bat  test_compute_image_chain.sh  test_cull_parser.bat  test_cull_parser.sh  test_frag_pass.bat  test_frag_pass.sh  test_invalid_atomic_input.bat  (+31 more)
tests/inputs/: fullscreen_triangle.ply  sky.jpg.xmp  sponge.ply
tests/python/: rawgl_python_batch_close_smoke.py  rawgl_python_histogram_smoke.py  rawgl_python_host_mesh_smoke.py  rawgl_python_import_smoke.py  rawgl_python_integer_pass_output_smoke.py  rawgl_python_mesh_api_forms_smoke.py  rawgl_python_mesh_override_scope_smoke.py  rawgl_python_metadata_smoke.py  rawgl_python_multipass_batch_smoke.py  rawgl_python_sequence_smoke.py  rawgl_python_session_error_smoke.py  rawgl_python_sky_codec_conversion_smoke.py  rawgl_python_workflow_smoke.py
tests/shaders/: EmptyLUT.frag  EmptyST.frag  array_element_uniform.comp  array_reflection.frag  atomic_counter.comp  atomic_counter_array.comp  empty.vert  host_image_roundtrip.comp  image_chain_consume.comp  image_chain_source.comp  input_override.comp  mesh_ao.frag  mesh_ao.vert  mesh_material_id.frag  mesh_material_id.vert  output_array.frag  output_array_dual.frag  pass1.frag  pass2.frag  pass3.frag  persistent_atomic_counter.comp  persistent_read.comp  persistent_write.comp  single_file_vertfrag.glsl  solid_white.frag  system_uniforms.comp  test.comp  uint_uniform.comp  vec2_uniform.comp
tools/registry/: gpu_delays.reg
(+64 files in other folders)
